data/all_generated_tests/raw_wast_tests/br_if_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1994.wast
;; 5. **Test: Conditional Calls to Imported Functions with `br_if` Decision-making**    - **Constraint Checked:** Verify if `br_if` in the caller module can conditionally call imported functions without incorrectly handling stack or control flow.    - **Description:** Use `br_if` in the caller module to decide whether to call an imported function. Ensure branching conditions are met and the stack remains valid post-call.

(assert_invalid
  (module
    (import "env" "external_func" (func $external_func (param i32) (result i32)))
    (func $caller_func (param i32) (result i32)
      (block (result i32)
        (br_if 0
          (call $external_func (i32.const 1))
          (get_local 0)
        )
        (i32.const 0)
      )
    )
  )
  "type mismatch"
)